// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`If Input works properly If type:text rendered properly 1`] = `
<input
  data-testid="input-test"
  placeholder="hello"
  type="text"
  value=""
/>
`;

exports[`If Input works properly If value rendered properly 1`] = `
<input
  data-testid="input-test"
  placeholder="hello"
  type="text"
  value="hello world"
/>
`;
